--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: python
 python:
   - 3.6
 install:
-  - pip3 install unittest
-script: python3 test_calc.py
+  - pip install unittest
+script: python test_calc.py
   
